<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:QuickSideBarView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.lizl.demo.passwordbox.customview.CustomTitleBar
        android:id="@+id/ctb_title"
        style="@style/ToolbarLayoutStyle"
        android:layout_alignParentTop="true"
        QuickSideBarView:backBtnVisible="true"
        QuickSideBarView:titleText="@string/modify_lock_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.lizl.demo.passwordbox.customview.EditTextWithDecText
        android:id="@+id/et_current_password"
        style="@style/EditTextWithDecTextStyle"
        android:layout_marginTop="@dimen/input_text_edit_padding_edge"
        app:decText="@string/current_password"
        app:editTextMaxEms="@integer/number_password_edit_max_ems"
        app:exitTextInputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctb_title"/>

    <com.lizl.demo.passwordbox.customview.EditTextWithDecText
        android:id="@+id/et_new_password"
        style="@style/EditTextWithDecTextStyle"
        app:decText="@string/new_password"
        app:editTextMaxEms="@integer/number_password_edit_max_ems"
        app:exitTextInputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_current_password"/>

    <com.lizl.demo.passwordbox.customview.EditTextWithDecText
        android:id="@+id/et_confirm_password"
        style="@style/EditTextWithDecTextStyle"
        app:decText="@string/confirm_password"
        app:editTextMaxEms="@integer/number_password_edit_max_ems"
        app:exitTextInputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_button_height"
        android:layout_marginEnd="@dimen/input_text_edit_padding_edge"
        android:layout_marginStart="@dimen/input_text_edit_padding_edge"
        android:layout_marginTop="@dimen/global_content_padding_content"
        android:background="@drawable/bg_button"
        android:enabled="true"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/global_text_size"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>